[package]
name = "hass-alexa-relay"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.82", features = ["backtrace"] }
clap = { version = "3.2.22", features = ["derive", "env"] }
lambda_runtime = "0.11.2"
log = "0.4.21"
onetun = { version = "0.3.4", default-features = false }
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11.27", features = ["rustls-tls-native-roots"], default-features = false }
serde = { version = "1.0.209", features = ["serde_derive"] }
serde_json = "1.0.121"
tokio = { version = "1.38.1", features = ["tokio-macros"] }
