[package]
name = "hass-alexa-relay"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.93", features = ["backtrace"] }
clap = { version = "3.2.22", features = ["derive", "env"] }
lambda_runtime = "0.11.2"
log = "0.4.22"
onetun = { version = "0.3.10", default-features = false }
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11.27", features = ["rustls-tls-native-roots"], default-features = false }
serde = { version = "1.0.210", features = ["serde_derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["tokio-macros"] }
